--- a/.gitignore
+++ b/.gitignore
@@ -591,3 +591,6 @@ obj/
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudio,dotnetcore
+
+Exported/
+Resources/
